<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/header"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/newspaper"
            android:textColor="@color/colorLight"
            android:textSize="45dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="false"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="text">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="numberPassword">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopBtn"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@color/colorLight" />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:background="@mipmap/ic_launcher_round"
        />
</RelativeLayout>